# rx-server

./: .gitignore  .pre-commit-config.yaml  Makefile  README_ARCHITECTURE.md  main.py  pyproject.toml
app/core/: logging_config.py  sqlite_log_sink.py  structure.py
app/lib/routeros/application/: __init__.py
app/lib/routeros/application/use_cases/: __init__.py
app/lib/routeros/domain/entities/: __init__.py  router_info.py  system_resource.py
app/lib/routeros/domain/repositories/: __init__.py
app/lib/routeros/infrastructure/: __init__.py
app/lib/routeros/infrastructure/mikrotik/: __init__.py  constant.py  system_resource_repository.py  types.py
app/lib/routeros/types/: __init__.py  connection_config.py  response.py
app/route/v1/: __init__.py  routeros.py
app/settings/: __init__.py  core.py  middleware.py
src/: __init__.py
src/application/: __init__.py
src/application/use_cases/: __init__.py
src/domain/entities/: __init__.py  router_info.py  system_resource.py
src/domain/repositories/: __init__.py
src/infrastructure/: __init__.py  repositories.py
src/infrastructure/mikrotik/: __init__.py
src/presentation/: __init__.py  controllers.py
