[project]
name = "rx-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "devtools>=0.12.2",
    "marimo>=0.16.4",
    "mypy>=1.18.2",
    "python-dotenv>=1.1.1",
    "routeros-api>=0.21.0",
]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "jupyterlab>=4.4.9",
]
